# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  luokkakaavio.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: kaavio.md  sekvenssikaavio HSL.md
src/: board.py  game_state.py  index.py  renderer.py  tetrominoes.py
src/game/: board.py  config.py  tetrominoes.py
src/graphics/: menu.py  renderer.py
src/tests/: test_board.py
