[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "A5Beef",email = "edvintran@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "coverage (>=7.13.5,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "coverage (>=7.13.5,<8.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
